<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditDrivewayInfoActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:id="@+id/placesContainer"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="8dp">
        <fragment
                android:id="@+id/autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="8dp"
                android:layout_alignParentTop="true"/>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pricing($)"
            android:textSize="8pt"
            android:layout_below="@id/placesContainer"
            android:id="@+id/pricing"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editPrice"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/pricing"
            android:text="4"
            android:layout_marginStart="8dp"
            android:digits="1234567890"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:maxLength="2"/>


    <SeekBar
            android:id="@+id/seekbar"
            android:layout_toRightOf="@id/editPrice"
            android:layout_marginTop="8dp"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/editPrice"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="30"
            android:progress="4"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editPrice"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:textOn="Active"
            android:textOff="Inactive"
            android:text="Inactive"
            android:id="@+id/on_off_switch"/>

    <ImageButton
            android:id="@+id/checkmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/check_mark"
            android:background="@null"
            android:onClick="clickButton"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:layout_alignParentRight="true"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="8dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="Delete"
            android:background="@color/fui_transparent"
            android:textSize="8pt"
            android:textColor="#FF0000"
            android:onClick="deleteButton"/>


</RelativeLayout>