<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/drivewayAddButton"
            android:title="addButton"
            app:showAsAction="always"
            android:icon="@drawable/plus_sign_24"
    />
</menu>