<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/icons8_garage_100"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_reservations"
            android:icon="@drawable/icons8_calendar_100"
            android:title="@string/title_reservations"/>

    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/icons8_settings_100"
            android:title="@string/title_settings"/>

</menu>
